[package]
name = "resilinet"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
tun = { version = "0.6", features = ["async"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
hex = "0.4"
# Crypto
chacha20poly1305 = "0.10"
rand = "0.8"
# Compression
zstd = "0.12"
# TUI
ratatui = "0.26"
crossterm = "0.27"
chrono = "0.4"
# Utils
parking_lot = "0.12"
futures = "0.3"
